# nginx-syslog-postgres-bridge

./: .env.example  .gitlab-ci.yml  Cargo.toml  Changelog.md  Dockerfile  README.md  sqlx-data.json
.github/: CONTRIBUTING.md
.github/rust-env/: action.yml
.github/workflows/: build.yml  docker-develop.yml  docker-release.yml  release.yml  test.yml
.sqlx/: query-53f5c68435fe4df2e22988437498a15511bcdcbf6adc31af6558758babc727ef.json
docs/: benchmark.md  nginx_config.md
migrations/: 20220809000001_create_access_log_table.sql  20220906185335_add_upstream_host_index_to_access_log.sql  20240326203425_make_timescaledb_optional.sql
scripts/: init_db  jemalloc-wrapper  start_dev_db
src/: access_log_column_vecs.rs  bridge.rs  lib.rs  main.rs  parsers.rs  settings.rs
src/parsers/: access_log_entry.rs  deserializers.rs
src/parsers/deserializers/: datetime_from_mstimestamp.rs  optional_normalized_ip.rs  optional_normalized_string.rs  optional_number_from_string.rs
tests/: helpers.rs  main.rs
