[package]
name = "nginx-syslog-postgres-bridge"
description = "Receives syslog messages from nginx and stores them in a PostgreSQL database"
authors = ["Dennis Schubert <mail@dennis-schubert.de>"]
repository = "https://github.com/denschub/nginx-syslog-postgresql-bridge"
license = "MIT"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive", "env", "wrap_help"] }
env_logger = "0.11"
log = "0.4"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syslog_loose = "0.21"
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
]

[dependencies.tokio]
version = "1"
default-features = false
features = ["rt-multi-thread", "net", "macros"]
