[package]
name = "nginx-syslog-postgres-bridge"
description = "Receives syslog messages from nginx and stores them in a PostgreSQL database"
authors = ["Dennis Schubert <mail@dennis-schubert.de>"]
repository = "https://github.com/denschub/nginx-syslog-postgresql-bridge"
license = "MIT"
version = "2.1.2"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive", "env", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
syslog_loose = "0.21"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
