[package]
name = "nginx-syslog-postgres-bridge"
description = "Receives syslog messages from nginx and stores them in a PostgreSQL database"
authors = ["Dennis Schubert <mail@dennis-schubert.de>"]
repository = "https://github.com/denschub/nginx-syslog-postgresql-bridge"
license = "MIT"
version = "3.0.1"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive", "env", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
syslog_loose = "0.23"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
